Allow magnify sprites on View Sprites
Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpustats are enabled by default on ./configure
Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
Improved Jupiter Ace emulation: allow to hear MIC output
Improved CPC emulation: allow to hear Cassete Out sound
Improve Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)

Improved Hilow Datadrive emulation:
-Added Raw emulation, like the real device
-Allow ddh variable size (from 3 up to 256 sectors)
-Allow to format only one side on ddh files
-Allow to clear contents when formatting ("c/borrado" or "s/borrado") on ddh files

Improved Debug:
- CPU history: allow to change memory pointer to the PC register show in history
- Show when CPU is in wait state
- Added breakpoint action save-binary
- Added Symbol Table loading

Improved Hexadecimal editor:
- Now the data is refreshed when the window has the focus too
- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently
- Allow right click on the device icons located on the lower part of the ZX Desktop

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers